# CMAKE

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  hello.c  hello.cc  main.c
src/test/: CMakeLists.txt  main.cc
t1/: CMakeLists.txt
